# proxmoxve

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint  CONTRIBUTING.md  Dockerfile.dev  LICENSE.md  README.md  crowdin.yml  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new_language_request.yml
.github/workflows/: black.yml  hacs.yaml  hassfest.yaml  lint.yml  pylint.yaml  python-app.yml  release.yml  ruff.yaml  validate.yml
blueprints/: readme.md  reload_config_entry_auto.yaml
config/: configuration.yaml
custom_components/proxmoxve/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  model.py  models.py  sensor.py  strings.json  switch.py
custom_components/proxmoxve/translations/: LICENSE.md  bg.json  ca.json  de.json  en.json  es.json  fr.json  it.json  nl-NL.json  pt-BR.json  pt.json  ru.json  tr.json  zh-Hans.json
custom_components/proxmoxve_custom/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  models.py  sensor.py
custom_components/proxmoxve_custom/translations/: ca.json  de.json  en.json  es.json  it.json  pt-BR.json  ru.json  zh-CN.json
script/: run-mypy.sh
scripts/: develop
scripts_cron/: cpu_temperature.md
tests/: __init__.py  conftest.py  const.py  test_common.py  test_config_flow.py  test_config_flow_config.py  test_config_flow_import.py  test_config_flow_options.py  test_config_flow_reauth.py  test_init.py
